# ReadSpyn

./: .gitignore  API_REFERENCE.md  EXAMPLES_SUMMARY.md  INSTALLATION.md  README.md  ReadSpyn_Theory_and_Assumptions.aux  ReadSpyn_Theory_and_Assumptions.fdb_latexmk  ReadSpyn_Theory_and_Assumptions.fls  ReadSpyn_Theory_and_Assumptions.out  ReadSpyn_Theory_and_Assumptions.tex  ReadSpyn_Theory_and_Assumptions.toc  analyze_integration_effect.py  correct_noise_calculation.py  debug_snr.py  pyproject.toml  test_basic.py
examples/: ML_example.ipynb  README.md  basic_simulation.py  correlated_noise_example.ipynb  correlated_noise_example.py  example_jax_simulation.py  geometric_demo.ipynb  geometric_system_example.py  noise_generator.ipynb  simple_1f_noise_example.py  simple_correlated_noise_example.py  simple_two_sensor.py  test.ipynb  two_sensor_system.py  white_noise_example.ipynb  white_noise_example.py
src/: __init__.py  main.ipynb
src/ReadSpyn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/data/: data_read.ipynb
src/readout_simulator/: __init__.py  helper_functions.py  jax_simulator.py  main.ipynb  noise.py  noise_models.py  quantum_dot_system.py  sensor.py  sensor_backend.py  simulator.py
src/readout_simulator/modules/: rlc.py
